# rGEDI

./: .Rbuildignore  .gitignore  .gitmodules  .lintr  .travis.yml  CRAN-SUBMISSION  DESCRIPTION  NAMESPACE  NEWS.md  README.md  Rplot.png.REMOVED.git-id  aclocal.m4  cleanup  configure  configure.ac  cran-comments.md  examples.R  level1b_clip_gb_1.h5  level1b_clip_gb_2.h5  level1b_clip_gb_3.h5  level1b_clip_gb_4.h5  level1b_clip_gb_5.h5  level1b_clip_gb_6.h5  level1b_clip_gb_7.h5  level1b_clip_gb_8.h5  level2a.h5.REMOVED.git-id  rGEDI.Rproj
.github/workflows/: r.yml  workflow.yml
R/: .gitignore  C_addNoiseToWaveform.R  C_gediWFCollocate.R  C_gediWFMetrics.R  C_gediWFSimulator.R  C_processExtractMetrics.R  C_simulateFullWaveform.R  GEDIdownload.R  GridMetrics.R  L2Stats.R  LPDAACDataPool.R  RcppExports.R  TODO-Rcpp_processExtractMetrics.R  TODO-Rcpp_simulateFullWaveform.R  TODO-clipLevel1BGeo.R  TODO-clipLevel1Bdt.R  TODO-clipLevel2AM.R  TODO-clipLevel2BPAIProfile.R  TODO-clipLevel2BPAVDProfile.R  TODO-clipLevel2BVPM.R  TODO-level1BProfileViz.R  TODO-level1BSimulation.R  TODO-readLevel2B.R  TODO-xyStats.R  aggStats.R  argParse.R  class.gedi.R  class.gedi.level1b.R  clipLevel1B.R  clipLevel1BGeo.R  clipLevel1Bdt.R  clipLevel1Bh5.R  clipLevel2.R  clipLevel2A.R  clipLevel2AM.R  clipLevel2B.R  clipLevel2BPAIProfile.R  clipLevel2BPAVDProfile.R  clipLevel2BVPM.R  clipLevel3.R  (+48 more)
autom4te.cache/: output.0  requests  traces.0  traces.1
doc/: tutorial.R  tutorial.html
examples/: example_simulator.R
inst/: COPYRIGHTS  REFERENCES.bib
inst/doc/: tutorial.Rmd  tutorial.html
inst/extdata/: Cerrado.las  GEDI01_B_2019108080338_O01964_T05337_02_003_01_sub.h5.REMOVED.git-id  GEDI02_A_2019108080338_O01964_T05337_02_001_01_sub.h5.REMOVED.git-id  GEDI02_B_2019108080338_O01964_T05337_02_001_01_sub.h5.REMOVED.git-id  level2a.h5.REMOVED.git-id  level2b.h5  sample.las  stands_cerrado.dbf  stands_cerrado.shp  stands_cerrado.shx  study_area.dbf  study_area.sbn  study_area.sbx  study_area.shp  study_area.shx
inst/extdata/Amazon/: Amazon.las
inst/extdata/Savanna/: Savanna.las
inst/gdal/: gdalvrt.xsd  nitf_spec.xml  nitf_spec.xsd  ogrvrt.xsd
inst/include/: uniform.hpp
inst/m4/: ax_lib_hdf5.m4  gsl.m4  zlib.m4
inst/proj/: alhpgn.gsb  arhpgn.gsb  azhpgn.gsb  cnhpgn.gsb  cohpgn.gsb  cshpgn.gsb  emhpgn.gsb  eshpgn.gsb  ethpgn.gsb  flhpgn.gsb  gahpgn.gsb  guhpgn.gsb  hihpgn.gsb  iahpgn.gsb  ilhpgn.gsb  inhpgn.gsb  kshpgn.gsb  kyhpgn.gsb  lahpgn.gsb  mdhpgn.gsb  mehpgn.gsb  mihpgn.gsb  mnhpgn.gsb  mohpgn.gsb  mshpgn.gsb  nbhpgn.gsb  nchpgn.gsb  ndhpgn.gsb  nehpgn.gsb  njhpgn.gsb  nmhpgn.gsb  nvhpgn.gsb  nyhpgn.gsb  ohhpgn.gsb  okhpgn.gsb  pahpgn.gsb  pvhpgn.gsb  schpgn.gsb  sdhpgn.gsb  tnhpgn.gsb  (+9 more)
m4/: m4_ax_lib_gdal.m4
man/: .gitignore  GDALDataType.Rd  GDALDataset.Rd  GDALOpen.Rd  GDALRasterBand.Rd  GEDIfinder.Rd  LPDAACDataPool.Rd  clipLevel1B.Rd  clipLevel1BGeo.Rd  clipLevel1BGeoGeometry.Rd  clipLevel1BGeometry.Rd  clipLevel1Bh5.Rd  clipLevel1Bh5Geometry.Rd  clipLevel2A.Rd  clipLevel2AGeometry.Rd  clipLevel2AM.Rd  clipLevel2AMGeometry.Rd  clipLevel2B.Rd  clipLevel2BGeometry.Rd  clipLevel2BPAIProfile.Rd  clipLevel2BPAIProfileGeometry.Rd  clipLevel2BPAVDProfile.Rd  clipLevel2BPAVDProfileGeometry.Rd  clipLevel2BVPM.Rd  clipLevel2BVPMGeometry.Rd  clipLevel2Bh5.Rd  clipLevel3.Rd  clipLevel3Geometry.Rd  clipLevel4A.Rd  clipLevel4AGeometry.Rd  cliplevel1Bdt.Rd  cliplevel1BdtGeometry.Rd  cliplevel2AM.Rd  cliplevel2ah5.Rd  cliplevel2ah5Geometry.Rd  cliplevel2bh5Geometry.Rd  clipx.Rd  clipxGeometry.Rd  close-gedi.level2a-method.Rd  close-gedi.level2b-method.Rd  (+68 more)
src/: Makefile.in  Makefile.ucrt  Makevars  Makevars.in  Makevars.ucrt  Makevars.win  RcppExports.cpp  addNoiseHDF.c  argParse.c  argParse.h  collocateWaves2.c  collocateWavesWrapper.c  debug.c  dummy.cpp  functionWrappers.c  gdal.hpp  gediMetric.cpp  gediMetric.hpp  gediMetrics.c  gediRat.cpp  gediRat.hpp  gediSimulator.c  makefile  msgHandling.c  rasterizeHDF.cpp  registerDynamicSymbol.c
src/cmpfit-1.2/: Makefile  README  mpfit.c  testmpfit.c
src/cmpfit-1.5/: README  mpfit.c  mpfit.h  testmpfit.c
src/gedisimulator/: README.md  addNoiseHDF.c  checkProgress.csh  clipLidar.c  collocateWaves.c  comparePAVD.py  extractTracks.csh  filtDataForR.awk  filtForR.csh  filtGediMetric.csh  filtHeadForR.awk  findGroundCentre.c  fitTXpulse.c  gediAscii2hdf.c  gediHandler.py  gediIO.c  gediIO.h  gediMetric.c  gediMetric.csh  gediNoise.c  gediNoise.h  gediRat.c  gediRatList.csh  gediTest.c  iceHandler.py  installGedi.bash  lasCover.c  lasPoints.c  lgw2hdf.c  listALS.csh  listGediWaves.csh  makeSingularity.txt  makefile  makefile.base  mapLidar.c  metricWithProgress.csh  multiBound.awk  noiseTest.c  orbitTracks.bash  overlapLasFiles.awk  (+7 more)
src/gedisimulator/awk/: splitCoords.awk
src/gedisimulator/extractTracks/: alsBounds.awk  chooseMetricPrints.awk  chooseMetricPrints.c  gediTrackStats.awk  gridPrints.py  makefile  meanCoord.awk  metricBounds.awk  orbitTracks.py  placeGediTracks.awk  roughTest.py  trackStart.awk
src/gedisimulator/plotting/: compareSims.py
src/libclidar/: README.md  gaussFit.c  libDEMhandle.c  libDEMhandle.h  libLasProcess.c  libLasProcess.h  libLasRead.c  libLasRead.h  libLidVoxel.c  libLidVoxel.h  libLidarHDF.c  libLidarHDF.h  libOctree.c  libOctree.h  libTLSread.c  libTLSread.h  tiffRead.c  tiffRead.h  tiffWrite.c  tiffWrite.h
src/tools/: README.md  tools.c  tools.h
tools/: deps.R  winlibs.R
vignettes/: rGEDI - Introduction.Rmd  tutorial.Rmd
